refacto: Move database classes to database module
